; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_preparse.c_on_preparse_ended.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_preparse.c_on_preparse_ended.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32* }

@ITEM_PREPARSE_DONE = common dso_local global i32 0, align 4
@on_items_updated = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*)* @on_preparse_ended to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_preparse_ended(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_8__*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @VLC_UNUSED(i32* %9)
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %12, %struct.TYPE_8__** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @ITEM_PREPARSE_DONE, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  br label %40

17:                                               ; preds = %3
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %19 = call i32 @vlc_playlist_Lock(%struct.TYPE_8__* %18)
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @vlc_playlist_IndexOfMedia(%struct.TYPE_8__* %20, i32* %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, -1
  br i1 %24, label %25, label %37

25:                                               ; preds = %17
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %27 = load i32, i32* @on_items_updated, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = load i32, i32* %8, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %32, i64 %34
  %36 = call i32 @vlc_playlist_Notify(%struct.TYPE_8__* %26, i32 %27, i32 %28, i32* %35, i32 1)
  br label %37

37:                                               ; preds = %25, %17
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %39 = call i32 @vlc_playlist_Unlock(%struct.TYPE_8__* %38)
  br label %40

40:                                               ; preds = %37, %16
  ret void
}

declare dso_local i32 @VLC_UNUSED(i32*) #1

declare dso_local i32 @vlc_playlist_Lock(%struct.TYPE_8__*) #1

declare dso_local i32 @vlc_playlist_IndexOfMedia(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @vlc_playlist_Notify(%struct.TYPE_8__*, i32, i32, i32*, i32) #1

declare dso_local i32 @vlc_playlist_Unlock(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
